@@ -15,7 +15,8 @@ endif
 if WITH_COVERAGE
 cov:
 	$(MAKE) $(AM_MAKEFLAGS) check CFLAGS="$(CFLAGS) -O0 --coverage"
-	$(LCOV) --capture -d src -d utils -d test --exclude '/usr/*' --exclude "*/test/*" -o cov.info
+	$(LCOV) --capture -d src -d utils -d test \
+		--exclude '$(abs_builddir)/*' --exclude '/usr/*' --exclude '*/test/*' -o cov.info
 	$(GENHTML) -o coverage -t $(PACKAGE) cov.info
 clean-local:
 	find $(top_builddir) -name "*.gcno" -delete
